--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0128.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0128.html
@@ -497,9 +497,14 @@
             <ins class="alt" title="nlp 1.00">εἶπεν·</ins>
           </span>
         </span>
-        <span id="w_97" class="ocr_word" title="bbox 946 944 1078 999" lang="grc">
+        <span id="w_97_0" class="ocr_word" title="bbox 946 944 1078 999">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλλ’</ins>
+            <ins class="alt" title="nlp 2.00">„ἀλλ’</ins>
+          </span>
+        </span>
+        <span id="w_97_1" class="ocr_word" title="bbox 946 944 1078 999">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1097 945 1203 987" lang="grc">
@@ -520,11 +525,6 @@
         <span id="w_101" class="ocr_word" title="bbox 1639 946 1906 1000" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φιλοσοφίας</ins>
-          </span>
-        </span>
-        <span id="w_102" class="ocr_word" title="bbox 1948 946 2081 1000" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴδιον,</ins>
           </span>
         </span>
       </span>
@@ -562,9 +562,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 832 1087 970 1129">
+        <span id="w_109_0" class="ocr_word" title="bbox 832 1087 970 1129">
           <span class="alternatives">
-            <ins title="nlp 2.00">ërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_109_1" class="ocr_word" title="bbox 832 1087 970 1129">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 991 1085 1075 1128">
@@ -590,17 +595,12 @@
         </span>
         <span id="w_114" class="ocr_word" title="bbox 1605 1085 1648 1143" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
+            <ins title="nlp 2.00">(ὁ</ins>
           </span>
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1680 1085 1941 1144" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ἀρίστων)</ins>
-          </span>
-        </span>
-        <span id="w_116" class="ocr_word" title="bbox 1973 1101 2082 1142" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρὸς</ins>
           </span>
         </span>
       </span>
@@ -724,9 +724,9 @@
             <ins class="alt" title="nlp 1.00">καταλαμβάνειν</ins>
           </span>
         </span>
-        <span id="w_140" class="ocr_word" title="bbox 1977 1298 2084 1356">
+        <span id="w_140_0" class="ocr_word" title="bbox 1977 1298 2084 1356">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἇρ'</ins>
+            <ins class="alt" title="nlp 2.00">„ἆρ’</ins>
           </span>
         </span>
       </span>
@@ -831,9 +831,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_160" class="ocr_word" title="bbox 832 1514 970 1556">
+        <span id="w_160_0" class="ocr_word" title="bbox 832 1514 970 1556">
           <span class="alternatives">
-            <ins title="nlp 2.00">ërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_160_1" class="ocr_word" title="bbox 832 1514 970 1556">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_161" class="ocr_word" title="bbox 991 1513 1075 1556">
@@ -866,12 +871,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">(scil.</ins>
             <del title="nlp 0.90">(scil.</del>
-          </span>
-        </span>
-        <span id="w_167" class="ocr_word" title="bbox 1915 1512 2081 1572">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Aristo)</ins>
-            <del title="nlp 0.90">Aristo</del>
           </span>
         </span>
       </span>
@@ -1249,9 +1248,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_235" class="ocr_word" title="bbox 833 2155 970 2197">
+        <span id="w_235_0" class="ocr_word" title="bbox 833 2155 970 2197">
           <span class="alternatives">
-            <ins title="nlp 2.00">ërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_235_1" class="ocr_word" title="bbox 833 2155 970 2197">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_236" class="ocr_word" title="bbox 996 2154 1039 2197">
@@ -1283,11 +1287,6 @@
         <span id="w_241" class="ocr_word" title="bbox 1720 2172 1809 2198" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῶν</ins>
-          </span>
-        </span>
-        <span id="w_242" class="ocr_word" title="bbox 1840 2154 2083 2210" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐγκυκλίων</ins>
           </span>
         </span>
       </span>
@@ -1725,7 +1724,7 @@
         </span>
         <span id="w_326" class="ocr_word" title="bbox 690 2867 826 2909">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_327" class="ocr_word" title="bbox 840 2866 883 2909" lang="grc">
