--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0129.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0129.html
@@ -251,9 +251,14 @@
             <del title="nlp 0.90">Diogenea</del>
           </span>
         </span>
-        <span id="w_51" class="ocr_word" title="bbox 709 820 847 864">
+        <span id="w_51_0" class="ocr_word" title="bbox 709 820 847 864">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_51_1" class="ocr_word" title="bbox 709 820 847 864">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_52" class="ocr_word" title="bbox 867 818 949 863">
@@ -290,11 +295,6 @@
         <span id="w_58" class="ocr_word" title="bbox 1649 819 1771 871" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τέλος</ins>
-          </span>
-        </span>
-        <span id="w_59" class="ocr_word" title="bbox 1802 822 1969 877" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔφησεν</ins>
           </span>
         </span>
       </span>
@@ -1178,8 +1178,7 @@
         </span>
         <span id="w_233" class="ocr_word" title="bbox 475 2112 689 2156">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">EuBebius</ins>
-            <del title="nlp 0.90">EuBebius</del>
+            <ins title="nlp 2.00">Eusebius</ins>
           </span>
         </span>
         <span id="w_234" class="ocr_word" title="bbox 721 2127 865 2168">
