--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0130.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0130.html
@@ -720,9 +720,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_138" class="ocr_word" title="bbox 808 1239 946 1281">
+        <span id="w_138_0" class="ocr_word" title="bbox 808 1239 946 1281">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_138_1" class="ocr_word" title="bbox 808 1239 946 1281">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 972 1238 1034 1281">
@@ -760,11 +765,6 @@
         <span id="w_145" class="ocr_word" title="bbox 1844 1248 1936 1290" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῖς</ins>
-          </span>
-        </span>
-        <span id="w_146" class="ocr_word" title="bbox 1963 1242 2052 1283" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Κυνικοῖς)</ins>
           </span>
         </span>
       </span>
@@ -973,8 +973,7 @@
         </span>
         <span id="w_186" class="ocr_word" title="bbox 1624 1525 1909 1580">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">physiixyrum)</ins>
-            <del title="nlp 0.90">physiixyrum</del>
+            <ins title="nlp 2.00">physicorum)</ins>
           </span>
         </span>
         <span id="w_187" class="ocr_word" title="bbox 1952 1526 2052 1568">
