--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0131.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0131.html
@@ -41,15 +41,19 @@
             <del title="nlp 0.90">Stoicus</del>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 788 287 865 341">
+        <span id="w_5_0" class="ocr_word" title="bbox 788 287 865 341">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;e&amp;003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;e&amp;#x003E;</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 788 287 865 341">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 901 288 1108 331">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">corUrario</ins>
-            <del title="nlp 0.90">corUrario</del>
+            <ins title="nlp 2.00">contrario</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 1149 287 1257 330">
@@ -74,12 +78,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">exisHmat</ins>
             <del title="nlp 0.90">exisHmat</del>
-          </span>
-        </span>
-        <span id="w_11" class="ocr_word" title="bbox 1904 292 1943 333">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">et</ins>
-            <del title="nlp 0.90">et</del>
           </span>
         </span>
       </span>
@@ -522,7 +520,7 @@
         </span>
         <span id="w_87" class="ocr_word" title="bbox 1845 875 1946 915" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">porriges.“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
       </span>
@@ -668,9 +666,14 @@
             <del title="nlp 0.90">cum</del>
           </span>
         </span>
-        <span id="w_113" class="ocr_word" title="bbox 568 1078 729 1118">
+        <span id="w_113_0" class="ocr_word" title="bbox 568 1078 729 1118">
           <span class="alternatives">
-            <ins title="nlp 2.00">uxore.“</ins>
+            <ins class="alt" title="nlp 2.00">uxore.”</ins>
+          </span>
+        </span>
+        <span id="w_113_1" class="ocr_word" title="bbox 568 1078 729 1118">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_114" class="ocr_word" title="bbox 790 1075 899 1117">
@@ -701,12 +704,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">quamdiu</ins>
             <del title="nlp 0.90">quamdiu</del>
-          </span>
-        </span>
-        <span id="w_119" class="ocr_word" title="bbox 1821 1077 1972 1122">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">menti,</ins>
-            <del title="nlp 0.90">menti,</del>
           </span>
         </span>
       </span>
@@ -2150,9 +2147,14 @@
             <del title="nlp 0.90">cadibi</del>
           </span>
         </span>
-        <span id="w_363" class="ocr_word" title="bbox 779 2798 999 2841">
+        <span id="w_363_0" class="ocr_word" title="bbox 779 2798 999 2841">
           <span class="alternatives">
-            <ins title="nlp 2.00">convenit.“</ins>
+            <ins class="alt" title="nlp 2.00">convenit.”</ins>
+          </span>
+        </span>
+        <span id="w_363_1" class="ocr_word" title="bbox 779 2798 999 2841">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_364" class="ocr_word" title="bbox 1059 2799 1142 2842">
@@ -2176,12 +2178,6 @@
         <span id="w_367" class="ocr_word" title="bbox 1423 2800 1740 2855">
           <span class="alternatives">
             <ins title="nlp 2.00">diligentissime</ins>
-          </span>
-        </span>
-        <span id="w_368" class="ocr_word" title="bbox 1776 2805 1949 2853">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">monent,</ins>
-            <del title="nlp 0.90">monent,</del>
           </span>
         </span>
       </span>
@@ -2343,8 +2339,7 @@
         </span>
         <span id="w_397" class="ocr_word" title="bbox 1470 3016 1687 3071">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">supercUio</ins>
-            <del title="nlp 0.90">supercUio</del>
+            <ins title="nlp 2.00">supercilio</ins>
           </span>
         </span>
         <span id="w_398" class="ocr_word" title="bbox 1718 3016 1954 3071">
