--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0132.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0132.html
@@ -339,7 +339,7 @@
       <span class="ocr_line" title="bbox 344 663 2081 718">
         <span id="w_55" class="ocr_word" title="bbox 344 666 487 707">
           <span class="alternatives">
-            <ins title="nlp 2.00">socio.“</ins>
+            <ins title="nlp 2.00">“</ins>
           </span>
         </span>
         <span id="w_56" class="ocr_word" title="bbox 553 664 719 718">
