--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0133.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0133.html
@@ -18,7 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1873 182 1933 231">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">88</ins>
+            <ins title="nlp 2.00">83</ins>
           </span>
         </span>
       </span>
@@ -1076,9 +1076,14 @@
             <ins title="nlp 2.00">ἣ</ins>
           </span>
         </span>
-        <span id="w_205" class="ocr_word" title="bbox 260 1727 366 1785" lang="grc">
+        <span id="w_205_0" class="ocr_word" title="bbox 260 1727 366 1785">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ὅτι]</ins>
+            <ins class="alt" title="nlp 2.00">[ὅτι]</ins>
+          </span>
+        </span>
+        <span id="w_205_1" class="ocr_word" title="bbox 260 1727 366 1785">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_206" class="ocr_word" title="bbox 399 1729 448 1771" lang="grc">
@@ -1124,11 +1129,6 @@
         <span id="w_214" class="ocr_word" title="bbox 1705 1722 1796 1767" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐστὶ</ins>
-          </span>
-        </span>
-        <span id="w_215" class="ocr_word" title="bbox 1833 1724 1943 1767" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πάντως</ins>
           </span>
         </span>
       </span>
