--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0134.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0134.html
@@ -1306,7 +1306,7 @@
       <span class="ocr_line" title="bbox 320 2036 2110 2090">
         <span id="w_216" class="ocr_word" title="bbox 320 2056 353 2082">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">23</ins>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 371 2050 532 2078">
@@ -1612,7 +1612,7 @@
       <span class="ocr_line" title="bbox 320 2393 2108 2447">
         <span id="w_267" class="ocr_word" title="bbox 320 2413 355 2439">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">80</ins>
+            <ins title="nlp 2.00">30</ins>
           </span>
         </span>
         <span id="w_268" class="ocr_word" title="bbox 374 2394 675 2436">
@@ -1875,7 +1875,7 @@
       <span class="ocr_line" title="bbox 321 2750 2108 2805">
         <span id="w_311" class="ocr_word" title="bbox 321 2771 355 2797">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">86</ins>
+            <ins title="nlp 2.00">35</ins>
           </span>
         </span>
         <span id="w_312" class="ocr_word" title="bbox 374 2756 420 2794">
