--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0135.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0135.html
@@ -18,14 +18,14 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1954 167 2012 211">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">86</ins>
+            <ins title="nlp 2.00">85</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 386 273 2012 331">
         <span id="w_2" class="ocr_word" title="bbox 386 273 481 318">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">868</ins>
+            <ins title="nlp 2.00">368</ins>
           </span>
         </span>
         <span id="w_3" class="ocr_word" title="bbox 514 274 665 318">
@@ -435,9 +435,9 @@
             <del title="nlp 0.90">numquam</del>
           </span>
         </span>
-        <span id="w_74" class="ocr_word" title="bbox 1092 777 1287 821">
+        <span id="w_74_0" class="ocr_word" title="bbox 1092 777 1287 821">
           <span class="alternatives">
-            <ins title="nlp 2.00">timeis.“</ins>
+            <ins class="alt" title="nlp 2.00">timebis.”</ins>
           </span>
         </span>
       </span>
@@ -510,8 +510,7 @@
       <span class="ocr_line" title="bbox 259 920 2060 976">
         <span id="w_86" class="ocr_word" title="bbox 259 920 326 964">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iUi</ins>
-            <del title="nlp 0.90">iUi</del>
+            <ins title="nlp 2.00">illi</ins>
           </span>
         </span>
         <span id="w_87" class="ocr_word" title="bbox 356 934 524 973">
@@ -896,8 +895,7 @@
         </span>
         <span id="w_153" class="ocr_word" title="bbox 830 1354 1002 1396">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">recessU.</ins>
-            <del title="nlp 0.90">recessU.</del>
+            <ins title="nlp 2.00">recessit.</ins>
           </span>
         </span>
       </span>
@@ -1575,8 +1573,7 @@
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1655 2213 1734 2265">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">aU,</ins>
-            <del title="nlp 0.90">aU,</del>
+            <ins title="nlp 2.00">ait,</ins>
           </span>
         </span>
         <span id="w_281" class="ocr_word" title="bbox 1774 2212 1861 2255">
