--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0137.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0137.html
@@ -18,7 +18,7 @@
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1916 161 1973 206">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">g7</ins>
+            <ins title="nlp 2.00">87</ins>
           </span>
         </span>
       </span>
@@ -73,14 +73,14 @@
             <ins class="alt" title="nlp 1.00">μάλιστα</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 1707 269 1791 325">
+        <span id="w_12_0" class="ocr_word" title="bbox 1707 269 1791 325">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἣ&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἢ&amp;#x003Ε;</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 1821 272 1976 324" lang="grc">
+        <span id="w_12_1" class="ocr_word" title="bbox 1707 269 1791 325">
           <span class="alternatives">
-            <ins title="nlp 2.00">μόνοις</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -104,7 +104,7 @@
       <span class="ocr_line" title="bbox 347 405 1974 469">
         <span id="w_17" class="ocr_word" title="bbox 347 405 441 451">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">878</ins>
+            <ins title="nlp 2.00">378</ins>
           </span>
         </span>
         <span id="w_18" class="ocr_word" title="bbox 480 406 629 451">
@@ -680,19 +680,19 @@
             <ins title="nlp 2.00">συνουσίαν·</ins>
           </span>
         </span>
-        <span id="w_122" class="ocr_word" title="bbox 1585 1127 1707 1182">
+        <span id="w_122_0" class="ocr_word" title="bbox 1585 1127 1707 1182">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ὧν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ὧν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_122_1" class="ocr_word" title="bbox 1585 1127 1707 1182">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 1732 1127 1859 1170" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἄλλοι</ins>
-          </span>
-        </span>
-        <span id="w_124" class="ocr_word" title="bbox 1883 1125 1966 1182" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὶν</ins>
           </span>
         </span>
       </span>
@@ -1468,7 +1468,7 @@
         </span>
         <span id="w_273" class="ocr_word" title="bbox 1697 2269 1846 2326" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἄξιος</ins>
+            <ins title="nlp 2.00">ἄξιος</ins>
           </span>
         </span>
         <span id="w_274" class="ocr_word" title="bbox 1883 2278 1958 2327" lang="grc">
@@ -1500,7 +1500,7 @@
         </span>
         <span id="w_279" class="ocr_word" title="bbox 970 2355 1109 2395" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὑπὲρ</ins>
+            <ins title="nlp 2.00">ὑπὲρ</ins>
           </span>
         </span>
         <span id="w_280" class="ocr_word" title="bbox 1136 2341 1216 2396" lang="grc">
