--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0138.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0138.html
@@ -71,7 +71,7 @@
         </span>
         <span id="w_11" class="ocr_word" title="bbox 1856 294 2070 349" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὥφελεν,</ins>
+            <ins title="nlp 2.00">ὥφελεν,</ins>
           </span>
         </span>
       </span>
@@ -377,7 +377,7 @@
         </span>
         <span id="w_68" class="ocr_word" title="bbox 755 805 855 844" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_69" class="ocr_word" title="bbox 887 805 970 843" lang="grc">
@@ -990,15 +990,14 @@
             <del title="nlp 0.90">malle</del>
           </span>
         </span>
-        <span id="w_184" class="ocr_word" title="bbox 1668 1715 1764 1771">
+        <span id="w_184_0" class="ocr_word" title="bbox 1668 1715 1764 1771">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;se&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;se&amp;#x003E;</ins>
           </span>
         </span>
-        <span id="w_185" class="ocr_word" title="bbox 1795 1716 2089 1759">
+        <span id="w_184_1" class="ocr_word" title="bbox 1668 1715 1764 1771">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">adulescentem</ins>
-            <del title="nlp 0.90">adulescentem</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
