--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0139.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0139.html
@@ -241,14 +241,14 @@
             <ins title="nlp 2.00">τεχνικοῖς</ins>
           </span>
         </span>
-        <span id="w_44" class="ocr_word" title="bbox 1112 558 1282 613">
+        <span id="w_44_0" class="ocr_word" title="bbox 1112 558 1282 613">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;οὖσι&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὖσι&amp;#x003Ε;</ins>
           </span>
         </span>
-        <span id="w_45" class="ocr_word" title="bbox 2032 572 2048 599">
+        <span id="w_44_1" class="ocr_word" title="bbox 1112 558 1282 613">
           <span class="alternatives">
-            <ins title="nlp 2.00">5</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1894,7 +1894,7 @@
         </span>
         <span id="w_366" class="ocr_word" title="bbox 714 3093 954 3129">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërtianam</ins>
+            <ins title="nlp 2.00">ërtianam</ins>
           </span>
         </span>
         <span id="w_367" class="ocr_word" title="bbox 980 3106 1014 3129">
@@ -1918,9 +1918,14 @@
             <ins class="alt" title="nlp 1.00">ὡς</ins>
           </span>
         </span>
-        <span id="w_371" class="ocr_word" title="bbox 1335 3091 1507 3140" lang="grc">
+        <span id="w_371_0" class="ocr_word" title="bbox 1335 3091 1507 3140">
           <span class="alternatives">
-            <ins title="nlp 2.00">τέ&amp;x003C;κνα&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;κνα&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_371_1" class="ocr_word" title="bbox 1335 3091 1507 3140">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_372" class="ocr_word" title="bbox 1533 3090 1748 3128">
@@ -1932,11 +1937,6 @@
         <span id="w_373" class="ocr_word" title="bbox 1827 3094 1867 3126">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">17</ins>
-          </span>
-        </span>
-        <span id="w_374" class="ocr_word" title="bbox 1895 3090 2024 3126" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἀστεῖα</ins>
           </span>
         </span>
       </span>
