--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0140.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0140.html
@@ -216,13 +216,7 @@
         </span>
         <span id="w_40" class="ocr_word" title="bbox 1618 582 1704 626">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">804</ins>
-          </span>
-        </span>
-        <span id="w_41" class="ocr_word" title="bbox 1711 597 1744 625">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">e.</ins>
-            <del title="nlp 0.90">e.</del>
+            <ins class="alt" title="nlp 2.00">804e.</ins>
           </span>
         </span>
         <span id="w_42" class="ocr_word" title="bbox 1795 583 1895 626" lang="grc">
@@ -581,9 +575,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_109" class="ocr_word" title="bbox 788 1542 926 1585">
+        <span id="w_109_0" class="ocr_word" title="bbox 788 1542 926 1585">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_109_1" class="ocr_word" title="bbox 788 1542 926 1585">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_110" class="ocr_word" title="bbox 952 1542 1037 1585">
@@ -620,11 +619,6 @@
         <span id="w_116" class="ocr_word" title="bbox 1722 1558 1876 1586" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">κενοῦ</ins>
-          </span>
-        </span>
-        <span id="w_117" class="ocr_word" title="bbox 1914 1542 2031 1599" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Χρύσιιππος</ins>
           </span>
         </span>
       </span>
@@ -691,9 +685,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 244 1683 2030 1742">
-        <span id="w_131" class="ocr_word" title="bbox 244 1707 276 1732" lang="grc">
+        <span id="w_131_0" class="ocr_word" title="bbox 244 1707 276 1732">
           <span class="alternatives">
-            <ins title="nlp 2.00">15 καὶ</ins>
+            <ins class="alt" title="nlp 2.00">15</ins>
+          </span>
+        </span>
+        <span id="w_131_1" class="ocr_word" title="bbox 244 1707 276 1732">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_132" class="ocr_word" title="bbox 409 1685 794 1741" lang="grc">
@@ -1135,7 +1134,7 @@
       <span class="ocr_line" title="bbox 300 2253 2033 2314">
         <span id="w_208" class="ocr_word" title="bbox 300 2256 489 2314" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">| σιν</ins>
+            <ins title="nlp 2.00">σιν</ins>
           </span>
         </span>
         <span id="w_209" class="ocr_word" title="bbox 513 2256 565 2299" lang="grc">
@@ -1180,7 +1179,7 @@
         </span>
         <span id="w_217" class="ocr_word" title="bbox 1604 2253 1645 2312" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ δ')</ins>
+            <ins title="nlp 2.00">ὁ δ')</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1762 2254 1766 2311">
@@ -1438,7 +1437,7 @@
         </span>
         <span id="w_268" class="ocr_word" title="bbox 1795 2609 2035 2667" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γνώριμος</ins>
+            <ins title="nlp 2.00">γνώριμος</ins>
           </span>
         </span>
       </span>
