--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0142.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0142.html
@@ -278,7 +278,7 @@
       <span class="ocr_line" title="bbox 277 587 1483 642">
         <span id="w_43" class="ocr_word" title="bbox 277 604 294 632">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_44" class="ocr_word" title="bbox 312 592 359 631">
