--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0143.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0143.html
@@ -23,7 +23,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1884 163 1946 211">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">08</ins>
+            <ins title="nlp 2.00">93</ins>
           </span>
         </span>
       </span>
@@ -788,7 +788,7 @@
         </span>
         <span id="w_150" class="ocr_word" title="bbox 806 1827 931 1884">
           <span class="alternatives">
-            <ins title="nlp 2.00">434)·</ins>
+            <ins title="nlp 2.00">·</ins>
           </span>
         </span>
       </span>
@@ -960,9 +960,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_181" class="ocr_word" title="bbox 694 2474 831 2516">
+        <span id="w_181_0" class="ocr_word" title="bbox 694 2474 831 2516">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_181_1" class="ocr_word" title="bbox 694 2474 831 2516">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 847 2471 932 2515">
@@ -1000,11 +1005,6 @@
         <span id="w_188" class="ocr_word" title="bbox 1702 2491 1783 2518" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_189" class="ocr_word" title="bbox 1800 2477 1948 2518" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Μεταθεμένου</ins>
           </span>
         </span>
       </span>
@@ -1056,7 +1056,7 @@
         </span>
         <span id="w_200" class="ocr_word" title="bbox 1865 2563 1947 2602" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,οὐ</ins>
+            <ins title="nlp 2.00">οὐ</ins>
           </span>
         </span>
       </span>
@@ -1178,7 +1178,7 @@
         </span>
         <span id="w_222" class="ocr_word" title="bbox 710 2832 847 2875">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_223" class="ocr_word" title="bbox 874 2831 913 2874">
