--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0144.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0144.html
@@ -447,9 +447,14 @@
             <del title="nlp 0.90">XXIX.</del>
           </span>
         </span>
-        <span id="w_84" class="ocr_word" title="bbox 1348 958 1756 1017">
+        <span id="w_84_0" class="ocr_word" title="bbox 1348 958 1756 1017">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Δ)ιο(ν)ύσ(ιος)</ins>
+            <ins class="alt" title="nlp 2.00">(Δ)ιο(ν)ύσ(ιος)</ins>
+          </span>
+        </span>
+        <span id="w_84_1" class="ocr_word" title="bbox 1348 958 1756 1017">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1797 959 1802 1017">
@@ -462,11 +467,6 @@
             <ins class="alt" title="nlp 1.00">τοίν(υν</ins>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 2051 959 2075 1003" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 342 1029 815 1086">
         <span id="w_88" class="ocr_word" title="bbox 342 1029 716 1086" lang="grc">
@@ -476,17 +476,17 @@
         </span>
         <span id="w_89" class="ocr_word" title="bbox 746 1062 756 1072">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_90" class="ocr_word" title="bbox 777 1063 785 1072">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_91" class="ocr_word" title="bbox 806 1063 815 1073">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
       </span>
@@ -646,7 +646,7 @@
       <span class="ocr_line" title="bbox 290 1313 2079 1369">
         <span id="w_122" class="ocr_word" title="bbox 290 1333 323 1359">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">16</ins>
+            <ins title="nlp 2.00">15</ins>
           </span>
         </span>
         <span id="w_123" class="ocr_word" title="bbox 468 1315 639 1358">
@@ -725,13 +725,8 @@
         </span>
         <span id="w_135" class="ocr_word" title="bbox 759 1387 1013 1440">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">interficiant</ins>
+            <ins class="alt" title="nlp 2.00">interficiant,</ins>
             <del title="nlp 0.90">interficiant</del>
-          </span>
-        </span>
-        <span id="w_136" class="ocr_word" title="bbox 1022 1420 1032 1438">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,</ins>
           </span>
         </span>
         <span id="w_137" class="ocr_word" title="bbox 1064 1400 1219 1440">
@@ -1014,7 +1009,7 @@
         </span>
         <span id="w_188" class="ocr_word" title="bbox 1437 1740 1742 1799" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μυ)ριά(δα)ς.</ins>
+            <ins title="nlp 2.00">(μυ)ριά(δα)ς.</ins>
           </span>
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1797 1741 1964 1785" lang="grc">
@@ -1036,7 +1031,7 @@
       <span class="ocr_line" title="bbox 342 1810 2078 1871">
         <span id="w_192" class="ocr_word" title="bbox 342 1812 562 1870" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολ)λοῖς</ins>
+            <ins title="nlp 2.00">(πολ)λοῖς</ins>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 611 1830 691 1857" lang="grc">
@@ -1056,7 +1051,7 @@
         </span>
         <span id="w_197" class="ocr_word" title="bbox 981 1812 1079 1871" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὔτ’</ins>
+            <ins title="nlp 2.00">οὔτ’</ins>
           </span>
         </span>
         <span id="w_199" class="ocr_word" title="bbox 1119 1812 1357 1871" lang="grc">
@@ -1200,7 +1195,7 @@
       <span class="ocr_line" title="bbox 290 2025 2077 2083">
         <span id="w_225" class="ocr_word" title="bbox 290 2046 324 2073">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">85</ins>
+            <ins title="nlp 2.00">25</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 343 2044 423 2071" lang="grc">
@@ -1392,7 +1387,7 @@
         </span>
         <span id="w_263" class="ocr_word" title="bbox 1897 2239 1950 2297" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φ</ins>
+            <ins title="nlp 2.00">φ</ins>
           </span>
         </span>
         <span id="w_264" class="ocr_word" title="bbox 1972 2239 2077 2298">
